add agent sessssions controllers
